Write first unit tests for GetOrders method
